# ivxj

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Data.csv  Makefile  Tlens_h1_i4.csv  Tlens_h2_i3.csv  Tlens_h3_i2.csv  Tlens_h3_i3.csv  Tlens_h3_i4.csv  X_h1_i1.csv  X_h2_i4.csv  X_h3_i2.csv  X_h3_i4.csv  conf.py  dX_h1_i1.csv  dX_h1_i2.csv  dX_h2_i3.csv  dX_h3_i1.csv  dX_h3_i2.csv  dX_h3_i3.csv  example.ipynb  make.bat  result_h1_i3.csv  result_h2_i2.csv  result_h2_i4.csv  result_h3_i1.csv  result_h3_i4.csv  rhoz_h1_i4.csv  y_h1_i2.csv  y_h1_i3.csv  y_h3_i1.csv  y_h3_i2.csv  y_h3_i3.csv
src/ivxj/: __init__.py  delete_period_obs.py  gen_ivx.py  ivxj.py  split_mat_into_cells.py  within_trans.py  xj.py  xjackkUnbalanced.py  xjackk_unbalanced.py
tests/: Tlens_h1_i2.csv  X_h1_i2.csv  X_h1_i3.csv  X_h2_i1.csv  X_h2_i2.csv  X_h2_i4.csv  X_h3_i1.csv  X_h3_i2.csv  X_h3_i3.csv  X_h3_i4.csv  dX_h1_i2.csv  dX_h2_i1.csv  dX_h2_i3.csv  dX_h2_i4.csv  dX_h3_i1.csv  dX_h3_i2.csv  dX_h3_i3.csv  dX_h3_i4.csv  result_h1_i1.csv  result_h1_i2.csv  result_h1_i3.csv  result_h1_i4.csv  result_h2_i1.csv  result_h2_i2.csv  result_h2_i3.csv  result_h2_i4.csv  result_h3_i1.csv  result_h3_i2.csv  result_h3_i3.csv  result_h3_i4.csv  rhoz_h2_i1.csv  rhoz_h3_i3.csv  rhoz_h3_i4.csv  test_ivxj.py  y_h1_i4.csv  y_h2_i1.csv  y_h2_i2.csv  y_h2_i3.csv
