[tool.poetry]
name = "ivxj"
version = "0.1.0"
description = "Compute IVXJ estimates for unbalanced panel data under univariate case!"
authors = ["Ji Pan"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
numpy = ">=2.1.1"
pandas = ">=2.2.3"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "8.3.3"
pytest-cov = "5.0.0"
jupyter = "^1.1.1"
myst-nb = "^1.1.2"
sphinx-autoapi = "^3.3.2"
sphinx-rtd-theme = "^2.0.0"
requests = "^2.32.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
